Fix (pdfwrite) : Imprecise clipping.

DETAILS :

Bug 688407 "pdfrwrite : A shading displaced converting Altona_Visual_1v2a_x3.pdf".

When a clipping path is a single rectangle,
rounded coordinates were written into PDF,
because the internal representation rounds them to device pixels.
This doesn't comply with complex cases, in which clipping path
is written as a high level object with unrounded coordinates.
After scaling the generated PDF visual defects appeared.

EXPECTED DIFFERENCES :

pdfwrite 300dpi :

"Altona-Testsuite_p2_S_x3.pdf"
"Altona_Visual_bb_1v1_x3.pdf"
"Altona_Visual_sb_1v1_x3.pdf"
"Bug688308.ps"
"test.pdf"

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6207 a1074d23-0009-0410-80fe-cf8c14f379e6